--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PokemonPedia | Home</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script type="module" src="js/main.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PokemonPedia | Home</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script type="module" src="js/main.js"></script>
+  </head>
+  <body>
     <header id="header"></header>
     <main>
       <h1>PokemonPedia</h1>
-        <section id="banner"></section>
-        <section id="search"></section>
-        <section id="pokemon"></section>
+      <section id="banner"></section>
+      <section id="search"></section>
+      <section id="pokemon"></section>
     </main>
-</body>
+  </body>
 </html>
