Battle and Search Pokemon

--- a/src/battle/index.html
+++ b/src/battle/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokemonPedia | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="../js/battle.js"></script>
   </head>
   <body>
     <header id="header"></header>
     <main>
       <section id="banner">
-        <h2>Welcome to PokemonPedia</h2>
-        <p>
-          Search for any Pokemon you want to learn more about.
-        </p>
+        <h2>Battle Pokemon</h2>
+        <p>Select your pokemon and fight!</p>
       </section>
       <section id="search">
         <form id="search-form">
@@ -27,7 +25,7 @@
           <button type="submit">Search</button>
         </form>
       </section>
-      <section id="pokemon"></section>
+      <section id="pokemon-battle"></section>
     </main>
   </body>
 </html>
